<resources>
    <string name="app_name">Shoe Store Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="fragment_login">Login</string>
    <string name="welcome">welcome</string>
    <string name="fragment_welcome">Welcome</string>
    <string name="shoe_store_inventory">Shoe Store Inventory</string>
    <string name="fragment_instructions">Instructions</string>
    <string name="instruction_one"><![CDATA[Tap the + icon to add a new shoe ->]]></string>
    <string name="instruction_two"><![CDATA[Tap the Save Button to save the shoe ->]]></string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="fragment_list">Shoe List</string>
    <string name="empty_list">No Item</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add Item</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="fragment_details">Add Shoe</string>
    <string name="name">Name</string>
    <string name="how_to_add_item">How to add item</string>
</resources>